resolved spacing issues and baner image on mobile view

--- a/src/components/common/classroomCard.module.scss
+++ b/src/components/common/classroomCard.module.scss
@@ -1,3 +1,6 @@
 .main{
     background-image: url("../../assets/icons/classroomcourse.svg");
+    @media (max-width: 575px) {
+        margin: 8px 35px !important;
+      }
 }
